adiciona perfil da aluna Geovanna Domingos

--- a/devsSuperPoderosas/index.html
+++ b/devsSuperPoderosas/index.html
@@ -29,6 +29,12 @@
 
   <section class="container">
 
+    <div class="container_aluna">
+      <a href="https://github.com/geovannaadomingos">
+        <img src="https://avatars.githubusercontent.com/u/53124770?s=460&u=76ef61a28f2ebd5d3de132d10cc17f35af49cb17&v=4" alt="Imagem de perfil Geovanna Domingos"/>
+      </a>
+      <p>Uma recifense, aluna da {reprograma}, que ama aprender.</p>
+    </div>
 
   </section>
 
